# ProjectThinkk

./: README.md  pyproject.toml
backend/: .gitignore  chat.py  database.py  main.py  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatMessages.tsx  Header.tsx  MessageInput.tsx  WelcomeScreen.tsx
